Resolve problema de overflow do modal

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -5,6 +5,11 @@
     box-sizing: border-box;
 }
 
+html, body {
+    overflow-y: scroll;
+    height:100%;
+}
+
 body {
     background-color: #f6f8fc;
 }
